[package]
name = "banana-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
uuid = { version = "1", features = ["v4"] }
futures = "0.3.31"
futures-util = "0.3.31"
